[project]
name = "dify-api"
version = "1.13.3"
requires-python = ">=3.11,<3.13"

dependencies = [
    "aliyun-log-python-sdk~=0.9.37",
    "arize-phoenix-otel~=0.15.0",
    "azure-identity==1.25.3",
    "beautifulsoup4==4.14.3",
    "boto3==1.42.78",
    "bs4~=0.0.1",
    "cachetools~=5.3.0",
    "celery~=5.6.2",
    "charset-normalizer>=3.4.4",
    "flask~=3.1.2",
    "flask-compress>=1.17,<1.24",
    "flask-cors~=6.0.0",
    "flask-login~=0.6.3",
    "flask-migrate~=4.1.0",
    "flask-orjson~=2.0.0",
    "flask-sqlalchemy~=3.1.1",
    "gevent~=25.9.1",
    "gmpy2~=2.3.0",
    "google-api-core>=2.19.1",
    "google-api-python-client==2.193.0",
    "google-auth>=2.47.0",
    "google-auth-httplib2==0.3.0",
    "google-cloud-aiplatform>=1.123.0",
    "googleapis-common-protos>=1.65.0",
    "graphon>=0.1.2",
    "gunicorn~=25.3.0",
    "httpx[socks]~=0.28.0",
    "jieba==0.42.1",
    "json-repair>=0.55.1",
    "langfuse>=3.0.0,<5.0.0",
    "langsmith~=0.7.16",
    "markdown~=3.10.2",
    "mlflow-skinny>=3.0.0",
    "numpy~=1.26.4",
    "openpyxl~=3.1.5",
    "opik~=1.10.37",
    "litellm==1.82.6",                                    # Pinned to avoid madoka dependency issue
    "opentelemetry-api==1.40.0",
    "opentelemetry-distro==0.61b0",
    "opentelemetry-exporter-otlp==1.40.0",
    "opentelemetry-exporter-otlp-proto-common==1.40.0",
    "opentelemetry-exporter-otlp-proto-grpc==1.40.0",
    "opentelemetry-exporter-otlp-proto-http==1.40.0",
    "opentelemetry-instrumentation==0.61b0",
    "opentelemetry-instrumentation-celery==0.61b0",
    "opentelemetry-instrumentation-flask==0.61b0",
    "opentelemetry-instrumentation-httpx==0.61b0",
    "opentelemetry-instrumentation-redis==0.61b0",
    "opentelemetry-instrumentation-sqlalchemy==0.61b0",
    "opentelemetry-propagator-b3==1.40.0",
    "opentelemetry-proto==1.40.0",
    "opentelemetry-sdk==1.40.0",
    "opentelemetry-semantic-conventions==0.61b0",
    "opentelemetry-util-http==0.61b0",
    "pandas[excel,output-formatting,performance]~=3.0.1",
    "psycogreen~=1.0.2",
    "psycopg2-binary~=2.9.6",
    "pycryptodome==3.23.0",
    "pydantic~=2.12.5",
    "pydantic-settings~=2.13.1",
    "pyjwt~=2.12.0",
    "pypdfium2==5.6.0",
    "python-docx~=1.2.0",
    "python-dotenv==1.2.2",
    "pyyaml~=6.0.1",
    "readabilipy~=0.3.0",
    "redis[hiredis]~=7.4.0",
    "resend~=2.26.0",
    "sentry-sdk[flask]~=2.55.0",
    "sqlalchemy~=2.0.29",
    "starlette==1.0.0",
    "tiktoken~=0.12.0",
    "transformers~=5.3.0",
    "unstructured[docx,epub,md,ppt,pptx]~=0.21.5",
    "pypandoc~=1.13",
    "yarl~=1.23.0",
    "sseclient-py~=1.9.0",
    "httpx-sse~=0.4.0",
    "sendgrid~=6.12.3",
    "flask-restx~=1.3.2",
    "packaging~=23.2",
    "croniter>=6.0.0",
    "weaviate-client==4.20.4",
    "apscheduler>=3.11.0",
    "weave>=0.52.16",
    "fastopenapi[flask]>=0.7.0",
    "bleach~=6.3.0",
]
# Before adding new dependency, consider place it in
# alphabet order (a-z) and suitable group.

[tool.setuptools]
packages = []

[tool.uv]
default-groups = ["storage", "tools", "vdb"]
package = false

[dependency-groups]

############################################################
# [ Dev ] dependency group
# Required for development and running tests
############################################################
dev = [
    "coverage~=7.13.4",
    "dotenv-linter~=0.7.0",
    "faker~=40.11.0",
    "lxml-stubs~=0.5.1",
    "basedpyright~=1.38.2",
    "ruff~=0.15.5",
    "pytest~=9.0.2",
    "pytest-benchmark~=5.2.3",
    "pytest-cov~=7.1.0",
    "pytest-env~=1.6.0",
    "pytest-mock~=3.15.1",
    "testcontainers~=4.14.1",
    "types-aiofiles~=25.1.0",
    "types-beautifulsoup4~=4.12.0",
    "types-cachetools~=6.2.0",
    "types-colorama~=0.4.15",
    "types-defusedxml~=0.7.0",
    "types-deprecated~=1.3.1",
    "types-docutils~=0.22.3",
    "types-flask-cors~=6.0.0",
    "types-flask-migrate~=4.1.0",
    "types-gevent~=25.9.0",
    "types-greenlet~=3.3.0",
    "types-html5lib~=1.1.11",
    "types-markdown~=3.10.2",
    "types-oauthlib~=3.3.0",
    "types-objgraph~=3.6.0",
    "types-olefile~=0.47.0",
    "types-openpyxl~=3.1.5",
    "types-pexpect~=4.9.0",
    "types-protobuf~=6.32.1",
    "types-psutil~=7.2.2",
    "types-psycopg2~=2.9.21",
    "types-pygments~=2.19.0",
    "types-pymysql~=1.1.0",
    "types-python-dateutil~=2.9.0",
    "types-pywin32~=311.0.0",
    "types-pyyaml~=6.0.12",
    "types-regex~=2026.3.32",
    "types-shapely~=2.1.0",
    "types-simplejson>=3.20.0",
    "types-six>=1.17.0",
    "types-tensorflow>=2.18.0",
    "types-tqdm>=4.67.0",
    "types-ujson>=5.10.0",
    "boto3-stubs>=1.38.20",
    "types-jmespath>=1.0.2.20240106",
    "hypothesis>=6.131.15",
    "types_pyOpenSSL>=24.1.0",
    "types_cffi>=1.17.0",
    "types_setuptools>=80.9.0",
    "pandas-stubs~=3.0.0",
    "scipy-stubs>=1.15.3.0",
    "types-python-http-client>=3.3.7.20240910",
    "import-linter>=2.3",
    "types-redis>=4.6.0.20241004",
    "celery-types>=0.23.0",
    "mypy~=1.19.1",
    # "locust>=2.40.4",  # Temporarily removed due to compatibility issues. Uncomment when resolved.
    "sseclient-py>=1.8.0",
    "pytest-timeout>=2.4.0",
    "pytest-xdist>=3.8.0",
    "pyrefly>=0.57.1",
]

############################################################
# [ Storage ] dependency group
# Required for storage clients
############################################################
storage = [
    "azure-storage-blob==12.28.0",
    "bce-python-sdk~=0.9.23",
    "cos-python-sdk-v5==1.9.41",
    "esdk-obs-python==3.26.2",
    "google-cloud-storage>=3.0.0",
    "opendal~=0.46.0",
    "oss2==2.19.1",
    "supabase~=2.18.1",
    "tos~=2.9.0",
]

############################################################
# [ Tools ] dependency group
############################################################
tools = ["cloudscraper~=1.2.71", "nltk~=3.9.1"]

############################################################
# [ VDB ] dependency group
# Required by vector store clients
############################################################
vdb = [
    "alibabacloud_gpdb20160503~=5.1.0",
    "alibabacloud_tea_openapi~=0.4.3",
    "chromadb==0.5.20",
    "clickhouse-connect~=0.15.0",
    "clickzetta-connector-python>=0.8.102",
    "couchbase~=4.5.0",
    "elasticsearch==8.14.0",
    "opensearch-py==3.1.0",
    "oracledb==3.4.2",
    "pgvecto-rs[sqlalchemy]~=0.2.1",
    "pgvector==0.4.2",
    "pymilvus~=2.6.10",
    "pymochow==2.3.6",
    "pyobvector~=0.2.17",
    "qdrant-client==1.9.0",
    "intersystems-irispython>=5.1.0",
    "tablestore==6.4.2",
    "tcvectordb~=2.1.0",
    "tidb-vector==0.0.15",
    "upstash-vector==0.8.0",
    "volcengine-compat~=1.0.0",
    "weaviate-client==4.20.4",
    "xinference-client~=2.4.0",
    "mo-vector~=0.1.13",
    "mysql-connector-python>=9.3.0",
    "holo-search-sdk>=0.4.1",
]

[tool.pyrefly]
project-includes = ["."]
project-excludes = [".venv", "migrations/"]
python-platform = "linux"
python-version = "3.11.0"
infer-with-first-use = false
