[project]
name = "dify-client"
version = "0.1.12"
description = "A package for interacting with the Dify Service-API"
readme = "README.md"
requires-python = ">=3.6"
dependencies = [
    "requests",
]
authors = [
    {name = "Dify", email = "hello@dify.ai"}
]
license = {text = "MIT"}
keywords = ["dify", "nlp", "ai", "language-processing"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/langgenius/dify"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["dify_client"]
