[project]
name = "dify-trace-datadog"
version = "0.0.1"
dependencies = [
    "opentelemetry-api>=1.20.0,<2.0.0",
    "opentelemetry-sdk>=1.20.0,<2.0.0",
    "opentelemetry-exporter-otlp-proto-http>=1.20.0,<2.0.0",
    "opentelemetry-semantic-conventions>=0.41b0",
    "httpx",
]
description = "Dify ops tracing provider (Datadog)."

[tool.setuptools.packages.find]
where = ["src"]
