[project]
name = "dify-trace-tencent"
version = "0.0.1"
dependencies = [
    "opentelemetry-api==1.41.0",
    "opentelemetry-exporter-otlp-proto-grpc==1.41.0",
    "opentelemetry-sdk==1.41.0",
    "opentelemetry-semantic-conventions==0.62b0",
]
description = "Dify ops tracing provider (Tencent APM)."

[tool.setuptools.packages.find]
where = ["src"]
