[project]
name = "dify-trace-tencent"
version = "0.0.1"
dependencies = [
    # versions inherited from parent
    "opentelemetry-api",
    "opentelemetry-exporter-otlp-proto-grpc",
    "opentelemetry-sdk",
    "opentelemetry-semantic-conventions",
]
description = "Dify ops tracing provider (Tencent APM)."

[tool.setuptools.packages.find]
where = ["src"]
