[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "dify-vdb-iris"
version = "1.13.3"
requires-python = "~=3.12.0"
dependencies = [
    "intersystems-irispython>=5.1.0",
]
description = "Dify vector store backend (dify-vdb-iris)."

[project.entry-points."dify.vector_backends"]
iris = "dify_vdb_iris.iris_vector:IrisVectorFactory"

[tool.setuptools.packages.find]
where = ["src"]
