[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "dify-vdb-lindorm"
version = "1.13.3"
requires-python = "~=3.12.0"
dependencies = [
    "opensearch-py==3.1.0",
    "tenacity>=8.0.0",
]
description = "Dify vector store backend (dify-vdb-lindorm)."

[project.entry-points."dify.vector_backends"]
lindorm = "dify_vdb_lindorm.lindorm_vector:LindormVectorStoreFactory"

[tool.setuptools.packages.find]
where = ["src"]
