[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "dify-vdb-opensearch"
version = "1.13.3"
requires-python = "~=3.12.0"
dependencies = [
    "opensearch-py==3.1.0",
]
description = "Dify vector store backend (dify-vdb-opensearch)."

[project.entry-points."dify.vector_backends"]
opensearch = "dify_vdb_opensearch.opensearch_vector:OpenSearchVectorFactory"

[tool.setuptools.packages.find]
where = ["src"]
