[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "dify-vdb-oracle"
version = "1.13.3"
requires-python = "~=3.12.0"
dependencies = [
    "oracledb==3.4.2",
]
description = "Dify vector store backend (dify-vdb-oracle)."

[project.entry-points."dify.vector_backends"]
oracle = "dify_vdb_oracle.oraclevector:OracleVectorFactory"

[tool.setuptools.packages.find]
where = ["src"]
