[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "dify-vdb-pgvector"
version = "0.0.1"

dependencies = [
    "pgvector==0.4.2",
]
description = "Dify vector store backend (dify-vdb-pgvector)."

[project.entry-points."dify.vector_backends"]
pgvector = "dify_vdb_pgvector.pgvector:PGVectorFactory"

[tool.setuptools.packages.find]
where = ["src"]
