[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "dify-vdb-tablestore"
version = "1.13.3"
requires-python = "~=3.12.0"
dependencies = [
    "tablestore==6.4.3",
]
description = "Dify vector store backend (dify-vdb-tablestore)."

[project.entry-points."dify.vector_backends"]
tablestore = "dify_vdb_tablestore.tablestore_vector:TableStoreVectorFactory"

[tool.setuptools.packages.find]
where = ["src"]
