[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "dify-vdb-tencent"
version = "1.13.3"
requires-python = "~=3.12.0"
dependencies = [
    "tcvectordb~=2.1.0",
]
description = "Dify vector store backend (dify-vdb-tencent)."

[project.entry-points."dify.vector_backends"]
tencent = "dify_vdb_tencent.tencent_vector:TencentVectorFactory"

[tool.setuptools.packages.find]
where = ["src"]
